--- a/hyprconfs/hypr/hyprland.conf
+++ b/hyprconfs/hypr/hyprland.conf
@@ -6,7 +6,7 @@ $menu = wofi --show drun
 
 
 # Autostart programs:
-exec-once = hyprpaper & hypridle
+exec-once = waybar & hyprpaper & hypridle
 exec-once = systemctl --user start hyprpolkitagent
 
 
@@ -30,7 +30,7 @@ general {
     border_size = 2
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
-    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
+    col.active_border = rgba(83c092ee)
     col.inactive_border = rgba(595959aa)
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
@@ -160,22 +160,21 @@ device {
 }
 
 
-###################
-### KEYBINDINGS ###
-###################
 
-# See https://wiki.hyprland.org/Configuring/Keywords/
-$mod = super # Sets "Windows" key as main modifier
+# Keybindings:
+$mod = super
 
-# Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mod, return, exec, $terminal
 bind = $mod, space, exec, $menu
 bind = $mod shift, e, exit,
 bind = $mod shift, q, exec, hyprlock
 bind = $mod, q, killactive,
-bind = $mod, s, togglefloating,
-bind = $mod, P, pseudo, # dwindle
-bind = $mod, J, togglesplit, # dwindle
+bind = $mod, f, togglefloating,
+bind = $mod, s, pseudo, # dwindle
+bind = $mod, j, togglesplit, # dwindle
+
+bind = $mod, w, exec, firefox
+bind = $mod, p, exec, $terminal -e yazi
 
 # Move focus with mod + arrow keys
 bind = $mod, left, movefocus, l
